# kis-agent

./: .coverage_analysis.json  .cursorrules  .env.example  .flake8  .gitignore  .mcp.json  404.html  AGENTS.md  CHANGELOG.md  CLAUDE.md  EXCEPTION_SWALLOWING_AUDIT.md  IMPLEMENTATION_SUMMARY.md  MANIFEST.in  MISSING_METHODS.md  NXT_SUPPORT_CHANGES.md  PR_DRAFT.md  PYKIS_API_METHODS.md  PYKIS_REFERENCE.md  RATE_LIMIT_ANALYSIS.md  README.md  REFACTORING_PLAN.md  StockMonitor.py  UN_COMPATIBILITY_ANALYSIS.md  audit_non_dict_returns.py  audit_report.json  audit_report_$(date +%Y%m%d).py  audit_report_20250821.md  bs_detector_comparison.py  index.html  koreaInvest.xlsx  mkdocs.yml  pykis_bs_detector.py  pyproject.toml  pytest.ini  requirements.txt  setup.py  sitemap.xml  stonks_candles.db  test_api_call.py  test_api_compatibility.py  (+10 more)
.claude/agents/: pykis-reviewer.md
.github/: dependabot.yml
.github/workflows/: ci-cd.yml  ci.yml  claude-code-review.yml  coverage-boost.yml  docs.yml
.taskmaster/: config.json  state.json
.taskmaster/docs/: prd.md  pykis-mcp-server-prd.md
.taskmaster/tasks/: tasks.json
MIGRATION_v1.4.0/: index.html
RATE_LIMITER_GUIDE/: index.html
advanced/architecture/: index.html
advanced/examples/: index.html
advanced/llm-agent/: index.html
advanced/mcp-server/: index.html
advanced/performance/: index.html
api/account/: index.html
api/futures/: index.html
api/overseas/: index.html
api/stock/: index.html
api/trading-report-api/: index.html
api/websocket/: index.html
api/websocket-api/: index.html
api_reference/: index.html
architecture/futures-api-mapping/: index.html
architecture/futures-architecture/: index.html
architecture/futures-response-models/: index.html
architecture/loc-refactor-dependency-graph/: index.html
architecture/message-schema/: index.html
architecture/websocket-architecture/: index.html
changelog/: index.html
cli/usage/: index.html
docs/: MIGRATION_v1.4.0.md  RATE_LIMITER_GUIDE.md  README.md  api.rst  changelog.md  conf.py  contributing.rst  index.md  index.rst  installation.rst  mcp-tool-consolidation-design.md  usage.rst  websocket-facade-unification-plan.md
docs/advanced/: architecture.md  examples.md  llm-agent.md  mcp-server.md  performance.md
docs/api/: account.md  futures.md  overseas.md  stock.md  trading-report-api.md  websocket-api.md  websocket.md
docs/api_reference/: README.md  account_complete.py  response_mappings.json  stock_complete.py
docs/architecture/: futures-api-mapping.md  futures-architecture.md  futures-response-models.md  loc-refactor-dependency-graph.md  message-schema.md  websocket-architecture.md
docs/cli/: usage.md
docs/getting-started/: installation.md  quickstart.md
docs/guides/: getting-started.md
docs/reports/: phase-5.1-e2e-test-report.md
examples/: README.md  README_pbar_tratio.md  README_portfolio_monitor.md  StockMonitor.ipynb  StockMonitor.py  StockMonitor_example.py  async_auth_example.py  basic_usage.py  calculate_basis.py  daily_index_chart_price_example.py  daily_price_pagination_example.py  export_trading_history.py  future_option_price_example.py  future_orderbook_example.py  futures_code_generator_example.py  index_tickprice_example.py  list_interest_groups.py  minute_candle_crawler.py  overseas_stock_example.py  pbar_tratio_demo.py  portfolio_realtime_monitor.py  program_trade_analysis.py  pykis.ipynb  refactored_websocket_example.py  run.py  test_helpers.py  test_interest_stocks.py  test_kospi200_basis.py  test_pbar_tratio.py  test_pbar_tratio_with_chart.py  test_portfolio_monitor.py  test_rate_limiter_live.py  websocket_enhanced_example.py  websocket_multi_subscribe.py
getting-started/installation/: index.html
getting-started/quickstart/: index.html
guides/getting-started/: index.html
kis_agent/: __init__.py  cli_bridge.py  message_schema.py
kis_agent/account/: balance.py  balance_query_api.py  order_api.py  profit_api.py
kis_agent/cli/: __init__.py  field_map.py  main.py  schema.py
kis_agent/core/: agent.py  auth.py  base_api.py  cache.py  client.py  exceptions.py  rate_limiter.py  response_processor.py
kis_agent/futures/: __init__.py  account_api.py  code_generator.py  historical.py  order_api.py  price_api.py
kis_agent/overseas/: __init__.py  account_api.py  api_facade.py  order_api.py  price_api.py  ranking_api.py
kis_agent/overseas_futures/: __init__.py  account_api.py  order_api.py  price_api.py
kis_agent/responses/: README.md  __init__.py  overseas.py  stock.py
kis_agent/stock/: __init__.py  api.py  index_api.py  interest.py  investor_api.py  price_api.py
mcp-tool-consolidation-design/: index.html
postman_collections/: postman_ELW시세.json  postman_collection.json  postman_기본시세.json  postman_순위분석.json  postman_시세분석.json  postman_업종_기타.json  postman_종목정보.json  postman_주문_계좌.json
pykis/: __init__.py
pykis-mcp-server/: .env.example  .gitignore  .mcp.json.example  LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
pykis-mcp-server/.github/workflows/: ci.yml
pykis-mcp-server/src/pykis_mcp_server/: __init__.py  __main__.py  config.py  errors.py  server.py
pykis-mcp-server/src/pykis_mcp_server/tools/: __init__.py  account_tools.py  consolidated_tools.py  investor_tools.py  orchestration_tools.py  order_tools.py  rate_limiter_tools.py  stock_tools.py  utility_tools.py
pykis-mcp-server/tests/: conftest.py  test_basic.py  test_consolidated_tools.py  test_consolidated_tools_integration.py  test_tools.py
scripts/: check_loc.py
search/: search_index.json
src/: __init__.py  python-bridge.ts
testing/: test_account_apis_250108.py
tests/: README.md  benchmark_pykis.py  conftest.py  kis_integration_test.py  test_agent_usage.py  test_cache_integration.py  test_cache_realworld.py  test_cache_ttl.py  test_condition_stocks.py  test_exception_handling.py  test_inquire_daily_ccld.py  test_market_api.py  test_market_data.py  test_new_apis_integration_251010.py  test_program_trade.py  test_program_trade_unit.py  test_refactored_apis.py  test_token.py  test_ws_subscribe_41_mock.py
(+223 files in other folders)
