[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pykis"
version = "1.1.0"
description = "한국투자증권 OpenAPI Python Wrapper - Korea Investment & Securities Trading API Client"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Heewon Oh", email = "unohee@github.com"},
]
keywords = ["kis", "korean-investment", "stock", "trading", "api", "finance"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Investment",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "requests>=2.31.0,<3.0.0",
    "pandas>=1.5.0,<3.0.0",
    "python-dotenv>=0.21.0,<2.0.0",
    "pycryptodome>=3.23.0,<4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0,<9.0.0",
    "pytest-cov>=4.1.0,<6.0.0",
    "black>=23.0.0,<25.0.0",
    "isort>=5.12.0,<6.0.0",
    "flake8>=6.0.0,<8.0.0",
    "mypy>=1.5.0,<2.0.0",
    "pre-commit>=3.3.0,<5.0.0",
]
websocket = [
    "websockets>=12.0,<14.0",
    "aiohttp>=3.9.0,<4.0.0",
]
all = [
    "websockets>=12.0,<14.0",
    "aiohttp>=3.9.0,<4.0.0",
]

[project.urls]
Homepage = "https://github.com/unohee/pykis"
Repository = "https://github.com/unohee/pykis.git"
Documentation = "https://github.com/unohee/pykis/blob/main/README.md"
"Bug Tracker" = "https://github.com/unohee/pykis/issues"
Changelog = "https://github.com/unohee/pykis/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
where = ["."]
include = ["pykis*"]
exclude = ["tests*", "examples*", "docs*", "scripts*", ".github*"]

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 88

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: marks tests as integration tests",
]
python_files = ["test_*.py"]
addopts = "-v --cov=pykis --ignore=tests/unit/test_auth.py --ignore=tests/unit/test_client.py" 